<resources>
    <string name="app_name">请假助手</string>
    <string name="def_select_text">请选择 ></string>
    <string name="detail_title_text">   请假信息   </string>
    <string name="qr_code_title_text">   核验二维码   </string>
    <string name="how_to_destroy_text">如何销假？</string>
    <string name="leave_type_key_text">请假类型：</string>
    <string name="need_leave_key_text">需要离校：</string>
    <string name="need_leave_value_text">离校</string>
    <string name="destroy_rule_key_text">销假规则：</string>
    <string name="rule_value_text">离校请假需要销假，非离校请假无需销假</string>
    <string name="real_leave_key_text">实际休假时间：</string>
    <string name="real_leave_value_text">-</string>
    <string name="leave_msg_title_text">我的 请假申请</string>
    <string name="total_time_text">3小时30分钟</string>
    <string name="start_time_key_text">开始时间：  </string>
    <string name="end_time_key_text">结束时间：  </string>
    <string name="contact_key_text">紧急联系人：  </string>
    <string name="leave_reason_key_text">请假原因：  </string>
    <string name="position_key_text">发起位置：  </string>
    <string name="cc_man_key_text">抄送人：   </string>
    <string name="cc_man_value_text">无</string>
    <string name="user_name_end_text"> - 发起申请</string>
    <string name="leave_step_key">审批流程：  </string>
    <string name="step_title_text">审批流程记录</string>
    <string name="pass_text">通过</string>
    <string name="code_statement_text">本软件代码已经提交到GitHub仓库上，并且仅供技术研究使用,请勿用于任何商业及非法用途,否则后果作者概不负责。</string>

    <string-array name="leave_type">
        <item>事假</item>
        <item>病假</item>
        <item>其他</item>
    </string-array>
</resources>