<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_top"
        layout="@layout/include_detail_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/assist_view"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_top" />

    <TextView
        android:id="@+id/leave_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_type_key_text"
        android:textColor="@color/key_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/destroy_rule"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/include_top" />

    <TextView
        android:id="@+id/need_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_leave_key_text"
        android:textColor="@color/key_text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/leave_type" />

    <TextView
        android:id="@+id/destroy_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destroy_rule_key_text"
        android:textColor="@color/key_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/real_time"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/leave_type" />

    <TextView
        android:id="@+id/real_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real_leave_key_text"
        android:textColor="@color/key_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/assist_view"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/destroy_rule" />

    <View
        android:id="@+id/separate_view"
        android:layout_width="match_parent"
        android:layout_height="15.5dp"
        android:background="@drawable/shape_separate_bg"
        app:layout_constraintTop_toBottomOf="@+id/assist_view" />

    <View
        android:id="@+id/assist_view_1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="219dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separate_view" />

    <TextView
        android:id="@+id/leave_msg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/leave_msg_title_text"
        android:textColor="@color/title_text_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/separate_view" />

    <TextView
        android:id="@+id/total_time"
        android:layout_width="wrap_content"
        android:layout_height="31.5dp"
        android:background="@drawable/shape_total_time_bg"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/total_time_text"
        android:textColor="@color/total_time_text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/leave_start_time" />

    <TextView
        android:id="@+id/leave_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/start_time_key_text"
        android:textColor="@color/key_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/leave_end_time"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/leave_msg_title" />

    <TextView
        android:id="@+id/leave_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/end_time_key_text"
        android:textColor="@color/key_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/leave_step"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/leave_start_time" />

    <TextView
        android:id="@+id/leave_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_step_key"
        android:textColor="@color/key_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/contact_person"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/leave_end_time" />

    <TextView
        android:id="@+id/contact_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_key_text"
        android:textColor="@color/key_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/leave_reason"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/leave_step" />

    <TextView
        android:id="@+id/leave_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_reason_key_text"
        android:textColor="@color/key_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/leave_position"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/contact_person" />

    <TextView
        android:id="@+id/leave_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position_key_text"
        android:textColor="@color/key_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/CC_man"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/leave_reason" />

    <TextView
        android:id="@+id/CC_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/cc_man_key_text"
        android:textColor="@color/key_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/assist_view_1"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/leave_position" />

    <View
        android:id="@+id/separate_view_1"
        android:layout_width="match_parent"
        android:layout_height="15.5dp"
        android:background="@drawable/shape_separate_bg"
        app:layout_constraintTop_toBottomOf="@+id/assist_view_1" />

    <View
        android:id="@+id/assist_view_2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="176.5dp"
        app:layout_constraintTop_toBottomOf="@+id/separate_view_1" />

    <TextView
        android:id="@+id/leave_step_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/step_title_text"
        android:textColor="@color/title_text_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/separate_view_1" />

    <View
        android:id="@+id/view_blue"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginTop="51.5dp"
        android:background="@drawable/shape_round_blue"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/separate_view_1" />

    <TextView
        android:id="@+id/user_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:gravity="center"
        android:text="@string/user_name_end_text"
        android:textColor="@color/value_main_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_blue"
        app:layout_constraintStart_toEndOf="@+id/view_blue"
        app:layout_constraintTop_toTopOf="@+id/view_blue" />

    <TextView
        android:id="@+id/time_of_apply_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="03-13 10:05"
        android:textColor="@color/step_time_text_color"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_blue"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/view_blue" />

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@color/step_line_color"
        app:layout_constraintBottom_toTopOf="@id/view_green"
        app:layout_constraintEnd_toEndOf="@+id/view_blue"
        app:layout_constraintStart_toStartOf="@+id/view_blue"
        app:layout_constraintTop_toBottomOf="@id/view_blue" />

    <View
        android:id="@+id/view_green"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginTop="24.5dp"
        android:background="@drawable/shape_round_green"
        app:layout_constraintEnd_toEndOf="@+id/view_blue"
        app:layout_constraintStart_toStartOf="@+id/view_blue"
        app:layout_constraintTop_toBottomOf="@+id/view_blue" />

    <TextView
        android:id="@+id/teacher_pass_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:gravity="center"
        android:text="一级审批"
        android:textColor="@color/value_main_text_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_green"
        app:layout_constraintStart_toEndOf="@+id/view_green"
        app:layout_constraintTop_toTopOf="@+id/view_green" />

    <TextView
        android:id="@+id/time_of_pass_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="03-13 10:05"
        android:textColor="@color/step_time_text_color"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_green"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/view_green" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10.5dp"
        android:background="@drawable/shape_opinion_bg"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:text="审批意见：无"
        android:textColor="@color/key_text_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/view_green"
        app:layout_constraintTop_toBottomOf="@+id/teacher_pass_tv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.58520000" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06805555" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06018518" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93750000" />

</androidx.constraintlayout.widget.ConstraintLayout>